k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erpq-ingress
  namespace: erpq
spec:
  rules:
    - host: dashboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: comdash
                port:
                  number: 3000
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigate
                port:
                  number: 8080
    - host: auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 4100
    - host: login.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-web
                port:
                  number: 3000
    - host: core.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  number: 4000
    - host: erp-proxy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erp-proxy
                port:
                  number: 80
    - host: mq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
